jade features in action

--- a/src/layouts/default.jade
+++ b/src/layouts/default.jade
@@ -8,5 +8,11 @@ html
     link(rel="stylesheet", href="assets/css/app.css")
 
   body
+    block header
+      header
+        h1 header goes here
     block content
+    block footer
+      footer
+        h1 here goes footer
     script(src="assets/js/app.js")
