--- a/src/layouts/default.jade
+++ b/src/layouts/default.jade
@@ -5,14 +5,9 @@ html
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     script(src="https://use.fontawesome.com/c8751efcd6.js")
-    link(rel="stylesheet", href="assets/css/app.css")
+    link(rel="stylesheet", href="/assets/css/app.css")
 
   body
-    block header
-      header
-        h1 header goes here
+    include ../data/variables
     block content
-    block footer
-      footer
-        h1 here goes footer
-    script(src="assets/js/app.js")
+    script(src="/assets/js/app.js")
